--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.administrador.talleres">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -17,7 +20,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".taller_1" />
-        <activity android:name=".taller_2"></activity>
+        <activity android:name=".taller_2" />
+        <activity android:name=".taller3"></activity>
     </application>
 
 </manifest>
